[package]
name = "Logger"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI 核心（egui + 窗口封装）
egui = { version = "0.27", features = ["default_fonts", "serde"] }
eframe = { version = "0.27", features = ["default"] }
# 语法高亮（支持 200+ 语言）
syntect = { version = "5.1", features = ["default", "parsing", "html", "yaml-load"] }
# egui-syntect = "0.15"  # syntect 与 egui 适配
# 文件操作（跨平台对话框）
rfd = "0.14"  # 打开/保存文件对话框
# 文本处理（Unicode 字符支持）
unicode-segmentation = "1.10"
# 配置持久化（TOML 文件）
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 路径处理
dirs = "5.0"  # 获取系统默认目录（存储配置文件）
